Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 <pre><code>  $hpcrun -t  ./&lt;program&gt;
 </code></pre>
 
-<ol>
-<li>Programmstruktur ermitteln:</li>
-</ol>
+<p>Hierbei kann man verschiedene Events mit <code>-e event@period</code> messen. Die verfügbaren Events sind unter <code>hpcrun -l</code> yu finden.
+4. Programmstruktur ermitteln:</p>
 
 <pre><code>  $hpcstruct &lt;program&gt;
 </code></pre>
